--- a/css/styles.css
+++ b/css/styles.css
@@ -2,13 +2,17 @@ body {
     font-family: "Roboto", "Raleway", sans-serif;
     color: #2E2F42;
     
-  }
+}
+
 a{
     text-decoration: none;
 }
+
 ul {
     list-style-type: none;
 }
+
+/* two parts of the logo in header and footer */
 .logo-first-part{
     color: #4D5AE5;
     font-size: 18px;
@@ -19,6 +23,7 @@ ul {
     letter-spacing: 0.54;
     word-wrap: break-word; 
 }
+
 .logo-second-part{
     color: inherit;
     font-size: 18px;
@@ -29,31 +34,156 @@ ul {
     letter-spacing: 0.54;
     word-wrap: break-word; 
 }
+.logo-second-part-footer{
+    color: #F4F4FD;
+    font-size: 18px;
+    font-family: Raleway;
+    font-weight: 700;
+    text-transform: uppercase;
+    line-height: 21px;
+    letter-spacing: 0.54;
+    word-wrap: break-word;
+}
+
+/* menu-text */
+.text-for-contact {
+    color: #434455;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.5;
+    letter-spacing: 0.32px;
+    word-wrap: break-word;
+}
+
+.text-for-contact:hover,
+.text-for-contact:focus {
+    color: #404BBF;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.5;
+    letter-spacing: 0.32px;
+    word-wrap: break-word;
+}
+
+.text-in-menu, .text-for-studio {
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.32px;
+    word-wrap: break-word; 
+}
+
+.text-in-menu:hover, 
+.text-for-studio:hover {
+    color: #404BBF;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.5;
+    letter-spacing: 0.32px;
+    word-wrap: break-word;
+}
+
+.text-for-studio:active{
+    color: #404BBF;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.5;
+    letter-spacing: 0.32px;
+    word-wrap: break-word;
+    text-decoration: underline; 
+}
+
+/* different texts in sections */
 .title-header {
     color: white;
     font-size: 56px;
     font-weight: 700;
-    line-height: 60px;
-    letter-spacing: 1.12;
-    word-wrap: break-word; 
+    line-height: 1.07;
+    letter-spacing: 1.12px;
+    word-wrap: break-word;
+    text-align: center;
+    
 }
+
 .section-title{
     font-size: 36px;
     font-weight: 700;
     text-transform: capitalize;
-    line-height: 40px;
-    letter-spacing: 0.72;
-    word-wrap: break-word; 
+    line-height: 1.11;
+    letter-spacing: 0.72px;
+    word-wrap: break-word;
+    text-align: center;
 }
+
 .header-in-section{
     font-size: 20px;
     font-weight: 500;
-    line-height: 24px;
-    letter-spacing: 0.40;
+    line-height: 1.2;
+    letter-spacing: 0.40px;
     word-wrap: break-word;
 }
+
 .descriprion-in-section{
+    color: #434455;
     font-size: 16px;
     font-weight: 400;
-    line-height: 24px; 
+    line-height: 1.5; 
+}
+
+.description-for-team {
+    color: #434455;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.5px;
+    letter-spacing: 0.32px;
+    word-wrap: break-word;
+}
+
+.description-in-footer{
+    color: #F4F4FD;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.5px;
+    letter-spacing: 0.32px;
+    word-wrap: break-word; 
+}
+
+.no-display{
+    display: none;
+}
+
+/* button */
+.button-order{
+    color: white;
+    background-color: #4D5AE5;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.64px;
+    word-wrap: break-word;
+    align-self: center;
+    cursor: pointer;
+}
+
+.button-order:hover {
+    color: white;
+    background-color: #404BBF;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.64px;
+    word-wrap: break-word;
+    text-align: center;
+    cursor: pointer;
+}
+
+/* backgrounds */
+.background-first-section {
+    background-color:  #2E2F42;
+}
+.background-third-section {
+    background-color: #F4F4FD;
+}
+.background-footer{
+    background-color:  #2E2F42;
 }
